# avoidthis.zone

./: .firebaserc  .gitignore  README.md  firebase.json  firestore.indexes.json  firestore.rules
avoid-this-zone-app/: .env.sample  Dockerfile.dev  docker-compose.yml  package-lock.json  package.json  pyproject.toml  rspack.common.js  rspack.dev.js  rspack.prod.js
avoid-this-zone-app/.devcontainer/: devcontainer.json  docker-compose.yml
avoid-this-zone-app/docs/: project_structure.txt
avoid-this-zone-app/resources/public/: georgia-districts.geojson
avoid-this-zone-app/resources/template/: index.ejs
avoid-this-zone-app/scripts/: translation_cache.json
avoid-this-zone-app/scripts/translate/: translate.py
avoid-this-zone-app/src/: App.less  App.tsx  RootApp.tsx  firebase.tsx  index.less  index.tsx  variables.less
avoid-this-zone-app/src/app/: App.spec.tsx  App.tsx  index.less  index.tsx
avoid-this-zone-app/src/backend/: app.ts  auth.ts  functions.ts  index.ts  supabaseClient.ts
avoid-this-zone-app/src/firebase/: analytics.ts  auth.ts  config.ts  firestore.ts  functions.ts  index.ts
avoid-this-zone-app/src/hooks/: useAppDispatch.ts  useAppSelector.ts  useDoubleClickDragZoom.ts  useEnumData.ts  useMapEvent.ts
avoid-this-zone-app/src/i18n/: index.ts  translations.ts
avoid-this-zone-app/src/map/: DoubleClickDragZoomExtension.tsx
avoid-this-zone-app/src/providers/: AppDataContextProvider.tsx  ReportsProvider.tsx
avoid-this-zone-app/src/store/: FeatureStore.tsx  HeatmapStore.tsx
avoid-this-zone-app/src/utils/: geoUtils.ts  setupMap.ts
(+50 files in other folders)
